# computer_vision_training

./: .gitignore  Code_1_1_Imagedisplay.m  Code_1_1_Imagedisplay.py  Code_1_2_Imagedisplay.m  README.md  environment.yml  file_util.m  pyproject.toml
computer_vision_training/Chapter_1/: Code_1_1_Imagedisplay.m  Code_1_1_Imagedisplay.py  Code_1_1_Imagedisplay2.m  Code_1_2_Imagedisplay.m  Code_1_2_Imagedisplay.py
