[tool.poetry]
name = "computer_vision_training"
version = "0.1.0"
description = ""
authors = ["Larry Johnson <johnson.larry.l@fintorian.com>"]

[tool.poetry.dependencies]
matplotlib = "^3.6.3"
pandas = "^1.5.2"
python = "^3.9"
Pillow = "^10.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
